Added builder, constructors
